--- a/.travis.yml
+++ b/.travis.yml
@@ -23,22 +23,18 @@
 #
 # Template #1: General project. Test it using existing `platformio.ini`.
 #
+cache: 
+  directories: 
+    - ~/.platformio
+install: 
+  - "pip install -U platformio"
+  - "platformio update"
 language: python
- python:
-     - "2.7"
-
- sudo: false
- cache:
-     directories:
-         - "~/.platformio"
-
- install:
-     - pip install -U platformio
-     - platformio update
-
- script:
-     - platformio run
-
+python: 
+  - "2.7"
+script: 
+  - "platformio run"
+sudo: false
 #
 # Template #2: The project is intended to be used as a library with examples.
 #
