--- a/.travis.yml
+++ b/.travis.yml
@@ -34,6 +34,9 @@ python:
   - "2.7"
 script: 
   - "platformio run"
+  - "pio check"
+  - "pio remote test"
+  - "pio remote run --target upload"
 sudo: false
 #
 # Template #2: The project is intended to be used as a library with examples.
